RESOLVED FIXED224918
[Win][WTR] eventSender.leapForward doesn't work as expected
https://bugs.webkit.org/show_bug.cgi?id=224918
Summary [Win][WTR] eventSender.leapForward doesn't work as expected
Fujii Hironori
Reported 2021-04-21 23:33:35 PDT
[Win][WTR] eventSender.leapForward doesn't work as expected For example, fast/events/click-count.html is failing.
Attachments
Patch (3.07 KB, patch)
2021-04-21 23:40 PDT, Fujii Hironori
ews-feeder: commit-queue-
Patch (2.14 KB, patch)
2021-04-21 23:53 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2021-04-21 23:40:26 PDT
Fujii Hironori
Comment 2 2021-04-21 23:53:02 PDT
Fujii Hironori
Comment 3 2021-04-22 13:01:14 PDT
Comment on attachment 426780 [details] Patch Clearing flags on attachment: 426780 Committed r276455 (236915@main): <https://commits.webkit.org/236915@main>
Fujii Hironori
Comment 4 2021-04-22 13:01:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2021-04-22 15:59:30 PDT
Darin Adler
Comment 6 2021-04-22 16:44:27 PDT
Comment on attachment 426780 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426780&action=review > Tools/WebKitTestRunner/win/EventSenderProxyWin.cpp:154 > + Sleep(milliseconds); Actually waiting the specified length of time is *not* the concept of leapForward. Are you sure this will meet our needs for rapid testing?
Fujii Hironori
Comment 7 2021-04-22 16:55:04 PDT
Comment on attachment 426780 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426780&action=review >> Tools/WebKitTestRunner/win/EventSenderProxyWin.cpp:154 >> + Sleep(milliseconds); > > Actually waiting the specified length of time is *not* the concept of leapForward. Are you sure this will meet our needs for rapid testing? Yeah, it's somewhat sad. However, one one complains for DumpRenderTree for decades since r29992.
Note You need to log in before you can comment on or make changes to this bug.