[Win][WTR] eventSender.leapForward doesn't work as expected https://bugs.webkit.org/show_bug.cgi?id=224918

Reviewed by Don Olmstead.

fast/events/click-count.html was failing because
eventSender.leapForward didn't work as expected.

Use Sleep() API to implement it as well as DRT does.

* WebKitTestRunner/win/EventSenderProxyWin.cpp:
(WTR::EventSenderProxy::dispatchMessage):
(WTR::EventSenderProxy::EventSenderProxy):
(WTR::EventSenderProxy::leapForward):

Canonical link: https://commits.webkit.org/236915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276455 268f45cc-cd09-0410-ab3c-d52691b4dbfc